--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -4,8 +4,24 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
  */
 
+ ul {
+  list-style-type: none;
+  margin: 50px;
+  padding: 50px;
+  color: #0057B8;
+  font-family: aktiv-grotesk,sans-serif;
+  font-weight: 900;
+}
+nav{
+  font-weight: 1000;
+  list-style-type: none;
+  margin: 50px;
+  padding: 50px;
+  color: #0057B8;
+  font-family: aktiv-grotesk,sans-serif;
+}
 body {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: aktiv-grotesk,sans-serif;
 }
 
 h1,
@@ -14,13 +30,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: aktiv-grotesk,sans-serif;
   font-weight: 700;
 }
 
 header.masthead {
   position: relative;
-  background-color: #343a40;
+  background-color: #0057B8;
   background: url("../img/bg-masthead.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 8rem;
@@ -29,7 +45,7 @@ header.masthead {
 
 header.masthead .overlay {
   position: absolute;
-  background-color: #212529;
+  background-color: #0057B8;;
   height: 100%;
   width: 100%;
   top: 0;
@@ -66,59 +82,6 @@ header.masthead h1 {
   }
 }
 
-.features-icons {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.features-icons .features-icons-item {
-  max-width: 20rem;
-}
-
-.features-icons .features-icons-item .features-icons-icon {
-  height: 7rem;
-}
-
-.features-icons .features-icons-item .features-icons-icon i {
-  font-size: 4.5rem;
-}
-
-.features-icons .features-icons-item:hover .features-icons-icon i {
-  font-size: 5rem;
-}
-
-.testimonials {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.testimonials .testimonial-item {
-  max-width: 18rem;
-}
-
-.testimonials .testimonial-item img {
-  max-width: 12rem;
-  box-shadow: 0px 5px 5px 0px #adb5bd;
-}
-
-.call-to-action {
-  position: relative;
-  background-color: #343a40;
-  background: url("../img/bg-masthead.jpg") no-repeat center center;
-  background-size: cover;
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.call-to-action .overlay {
-  position: absolute;
-  background-color: #212529;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0.3;
-}
 
 footer.footer {
   padding-top: 4rem;
